fixed tags-container layer z-index

--- a/src/scss/template.scss
+++ b/src/scss/template.scss
@@ -35,6 +35,8 @@ body {
 }
 
 #tags-input-container {
+  z-index: 10;
+  position: relative;
   height: 3em;
   display: block;
 
